--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
@@ -37,6 +38,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
