--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "node-cron": "^4.2.1",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
