--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,33 @@
 # Dependencies
-node_modules
-.pnp
-.pnp.js
+node_modules/
+
+# Production build
+dist/
+build/
+
+# Environments
+.env
+.env.*
+*.env
 
 # Testing
-coverage
+coverage/
 
-# Production
-dist
-build
-
-# Misc
+# OS generated files
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor
-.vscode
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Editor directories
+.idea/
+*.swp
+*.swo
+
+# Docker
+docker-data/
